fix: #1533: add correct! default button color due wrong color on some iOS Safari versions

--- a/src/styles/lib.scss
+++ b/src/styles/lib.scss
@@ -27,7 +27,7 @@ button {
   border: none;
   text-transform: inherit;
   background: transparent;
-  color: $graytext-color;
+  color: $font-color;
 
   &:focus {
     outline: 0;
